[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "modelxray"
version = "0.1.0"
description = "Detect the real model behind any OpenAI-compatible API"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.scripts]
modelxray = "modelxray.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["modelxray"]
